roles/gpu_operator/files/gpu-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nvidia-gpu-operator
