roles/gpu_operator/files/nfd-operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-nfd
